jaxws runtime test on JPMS.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>